--- a/css/track-view.css
+++ b/css/track-view.css
@@ -64,18 +64,137 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	font-weight:400;
 	color:#fff !important;
 }
+
+.status_container {
+	margin-top: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.status_box {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.status_box p {
+	margin: 0px !important;
+}
+.status_line {
+	display: none;
+}
+.status_line_pc {
+	margin-bottom: 25px;
+	flex-grow: 1;
+	height: 4px;
+	background: #080;
+}
+
+.data_header {
+	width: 100%;
+	margin-bottom: 0px !important;
+	padding: 1em;
+	background-color: #0091d0 !important;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.data_header h2 {
+	text-align: center;
+	margin-bottom: 0px !important;
+	color: #fff !important;
+	font-size:22px;
+	word-break: break-all;
+}
+
+.data_info {
+	width: 100%;
+	min-height: 150px;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	background: #00aee6;
+}
+.data_info div {
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+.data_info p, .data_info span {
+	display: block;
+	margin-bottom: 0px !important;
+	color: #fff;
+}
+.data_info p {
+	font-size: 1rem;
+	font-weight: 700;
+}
+.data_info span {
+	font-size: 15px;
+	font-weight: 400;
+}
+
+@media (max-width: 912px) {
+	.data_info div {
+		width: 50%;
+	}
+}
+
+@media (max-width: 512px) {
+	.status_container {
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
+		margin-left: calc(50% - 55px);
+	}
+	.status_box {
+		flex-direction: row;
+		justify-content: flex-start;
+		align-items: center;
+	}
+	.status_line {
+		position: absolute;
+		display: block;
+		background: #080;
+		width: 4px;
+		height: 18px;
+		top: 62px;
+		left: 35px;
+	}
+	.status_line_pc {
+		display: none;
+	}
+	.data_info div {
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+	.data_header h2 {
+		font-size: 16px;
+	}
+}
+
+.imgcircle2 {
+	margin: 0.5rem;
+	height:55px;
+	width:55px;
+	border-radius:50%;
+	background-color:#F5998E;
+	position:relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.imgcircle2 img {
+	height:35px;
+	width:35px;
+}
 .shipment {
 	width:100%;
 	margin-top:10%;
-}
-span.line {
-    height: 5px;
-    width: 90px;
-    background-color:#F5998E;
-    display: block;
-    position: absolute;
-    top: 28%;
-    left: 45%;
 }
 .confirm{
 	text-align:center;
@@ -87,7 +206,7 @@ span.line {
 .confirm .imgcircle , .process .imgcircle, .quality .imgcircle {
 	background-color:#0091d0;
 }
-.confirm span.line, .process span.line {
+.status_box .status_line {
 	background-color:#0091d0; 
 }
 .content3 p {
@@ -157,10 +276,6 @@ span.line {
 
 /*---- responsive-design -----*/
 @media(max-width:1920px){
-	span.line {
-	width:157px;
-	left:32%;
-	}
 	.shipment{
 		margin-top:6%;
 	}
@@ -173,63 +288,16 @@ margin-left:-65%;
 	.content3 p {
     margin-left: -60%;
 }
-span.line {
-    width: 127px;
-    left: 37%;
-}
 }
 
-@media(max-width:1600px){
-span.line {
-    width: 117px;
-    left: 39%;
-}
-}
 
-@media(max-width:1440px){
-.content3 p {
-    margin-left: -53%;
-}
-span.line {
-    width: 99px;
-    left: 43%;
-}
-}
-
-@media (max-width: 1366px){
-span.line {
-    width: 90px;
-    left: 45%;
-}
-.shipment {
-    margin-top: 10%;
-}
-}
-
-@media (max-width: 1280px){
-span.line {
-    width: 80px;
-    left: 48%;
-	top:29%;
-}
-}
 
 @media (max-width: 1080px){
 .content {
 width: 75%;
 }
-span.line {
-    width: 88px;
-left: 46%;
-}
 }
 
-@media (max-width: 1050px){
-span.line {
-    width: 84px;
-    left: 47%;
-}
-}
 
 @media (max-width: 1024px){
 	.content{
@@ -244,19 +312,11 @@ span.line {
 	.content {
     width: 80%;
 }
-span.line {
-    width: 84px;
-    left: 47%;
-}
 }
 
 @media (max-width: 900px){
 .content {
     width: 85%;
-}
-span.line {
-    width: 78px;
-    left: 49%;
 }
 }
 
@@ -279,18 +339,8 @@ span.line {
 .content2-header1 p {
     margin: 0 -19% 0 -10%;
 }
-span.line {
-    width: 72px;
-    left: 51%;
-}
 }
 
-@media (max-width: 736px){
-	span.line {
-    width: 62px;
-    left: 55%;
-}
-}
 
 @media (max-width: 667px){
 	.content2-header1 p {
@@ -308,10 +358,6 @@ span.line {
 }
 .confirm{
 	margin-left:4%;
-}
-span.line {
-    width: 49px;
-    left: 60%;
 }
 }
 
@@ -343,10 +389,6 @@ span.line {
 .content {
 	height: 395px;
 }
-span.line {
-    width: 50px;
-    left: 58%;
-}
 }
 
 @media (max-width: 568px){
@@ -355,10 +397,6 @@ span.line {
 }
 	.content1{
 	padding: 1em;
-}
-	span.line {
-    width: 56px;
-    left: 47%;
 }
 	.content2-header1 {
     width: 23%;
@@ -441,12 +479,6 @@ span.line {
     top: 27%;
     left: 28%;
 }
-	span.line {
-    width: 6px;
-    left: 46%;
-    height: 48px;
-	top:124%;
-}
 	.content3 p {
     font-size: 15px;
     margin: -16% 0 4% -81%;
@@ -478,11 +510,6 @@ span.line {
 	.shipment {
     margin-top: 15%;
 }
-	span.line {
-	top:118%;
-	left:47%;
-	height:47px;
-}
 	.content {
     height: 770px;
 }
@@ -507,11 +534,6 @@ span.line {
 }
 	.content3 p {
     margin: -18% 0 8% -86%;
-}
-	span.line {
-    top: 105%;
-    left: 47.5%;
-    height: 52px;
 }
 	.shipment {
 		margin-left: 17%;
@@ -551,11 +573,6 @@ span.line {
 }
 	.shipment {
 	margin: 16% 0 0 19%;
-}
-	span.line {
-    top: 102%;
-    left: 50%;
-	height:44px;
 }
 	.footer {
 	margin-top: 1%;
